# K-CFD

./: .gitignore  README.md  build_final_report.py  generate_full_report.py  generate_report.py  main.py  pyproject.toml  run_all_quick.py  update_report.py
VV/: README.md  generate_meshes.py  render_all.py  results_summary.json  run_all.py
VV/case01_poiseuille/: README.md  input.json
VV/case01_poiseuille/mesh/: quad_100x40.msh
VV/case01_poiseuille/results/: poiseuille.vtu  results.json
VV/case02_cavity/: README.md  input.json
VV/case02_cavity/mesh/: quad_32x32.msh  quad_64x64.msh
VV/case02_cavity/results/: cavity.vtu  results.json
VV/case03_cht/: README.md  input.json
VV/case03_cht/results/: cht.vtu
VV/case04_bubble_rising/: README.md  input.json
VV/case04_bubble_rising/mesh/: tri_unstructured.msh
VV/case04_bubble_rising/results/: bubble.vtu  results.json
VV/case05_3d_duct/: README.md  input.json
VV/case05_3d_duct/results/: duct_3d.vtu
VV/case06_muscl_mms/: README.md  input.json
VV/case06_muscl_mms/mesh/: quad_10x10.msh  quad_20x20.msh  quad_40x40.msh
VV/case06_muscl_mms/results/: results.json
VV/case07_unstructured/: README.md  input.json
VV/case07_unstructured/results/: poiseuille_unstructured.vtu
VV/case08_mpi/: README.md  input.json
VV/case08_mpi/results/: results.json
VV/case09_phase_change/: README.md  input.json
VV/case10_reaction/: README.md  input.json
VV/case10_reaction/results/: reaction.vtu
VV/case11_radiation/: README.md  input.json
VV/case11_radiation/mesh/: slab_1x50.msh
VV/case11_radiation/results/: results.json
VV/case12_amr/: README.md  input.json
VV/case12_amr/results/: amr_cavity.vtu
VV/case13_gpu/: README.md  input.json
VV/case13_gpu/results/: gpu_cavity.vtu
VV/case14_3d_cavity/: README.md  input.json
VV/case14_3d_cavity/results/: results.json
VV/case15_3d_convection/: README.md  input.json
VV/case16_preconditioner/: README.md  input.json
VV/case16_preconditioner/mesh/: hex_20x10x10.msh
VV/case16_preconditioner/results/: results.json
VV/case17_adaptive_dt/: README.md  input.json
VV/case18_openmp/: README.md  input.json
VV/case18_openmp/results/: openmp_cavity.vtu
VV/case19_iapws/: README.md  input.json
VV/case19_iapws/mesh/: channel_20x5.msh
VV/case19_iapws/results/: results.json
VV/case20_rpi_boiling/: README.md  input.json
VV/case20_rpi_boiling/mesh/: heated_channel_20x10.msh
VV/case20_rpi_boiling/results/: results.json
VV/case21_virtual_mass/: README.md  input.json
VV/case21_virtual_mass/results/: results.json
VV/case22_polymesh/: README.md  input.json
VV/case22_polymesh/results/: results.json
VV/case23_hybrid_mesh/: README.md  input.json
VV/case23_hybrid_mesh/mesh/: hybrid_hex_tet.msh  hybrid_quad_tri.msh
VV/case23_hybrid_mesh/results/: results.json
VV/case_bfs/results/: bfs.vtu
core/: __init__.py  fields.py  fvm_operators.py  gpu_solver.py  gradient.py  interpolation.py  linear_solver.py  preconditioner.py  time_control.py
cpp/: CMakeLists.txt  CUDA_BUILD_NOTES.md
cpp/examples/: channel_flow.json
cpp/include/twofluid/: amr.hpp  checkpoint.hpp  chemistry.hpp  closure.hpp  conjugate_ht.hpp  distributed_mesh.hpp  distributed_solver.hpp  fields.hpp  fvm_operators.hpp  gpu_solver.hpp  gradient.hpp  hybrid_mesh_generator.hpp  interpolation.hpp  json_input.hpp  linear_solver.hpp  mesh.hpp  mesh_generator.hpp  mesh_generator_3d.hpp  mesh_reader.hpp  mpi_comm.hpp  mpi_solver.hpp  partitioning.hpp  phase_change.hpp  polymesh_reader.hpp  preconditioner.hpp  radiation.hpp  simple_solver.hpp  solid_conduction.hpp  steam_tables.hpp  surface_tension.hpp  time_control.hpp  turbulence.hpp  turbulence_sst.hpp  two_fluid_solver.hpp  vtk_writer.hpp  wall_boiling.hpp
cpp/meshes/: generate_all_meshes.py
cpp/meshes/case01_poiseuille/: mesh_50x20.msh
cpp/meshes/case04_bubble_rising/: mesh_20x60.msh
cpp/meshes/case11_radiation/: mesh_1x100.msh
cpp/meshes/case14_3d_cavity/: mesh_8x8x8.msh
cpp/meshes/case22_polymesh/: mesh_2cell.msh
cpp/src/: amr.cpp  bindings.cpp  checkpoint.cpp  chemistry.cpp  closure.cpp  conjugate_ht.cpp  distributed_mesh.cpp  distributed_solver.cpp  fields.cpp  fvm_operators.cpp  gpu_solver.cu  gpu_solver_stub.cpp  gradient.cpp  hybrid_mesh_generator.cpp  interpolation.cpp  json_input.cpp  linear_solver.cpp  main.cpp  mesh.cpp  mesh_generator.cpp  mesh_generator_3d.cpp  mesh_reader.cpp  mpi_comm.cpp  mpi_solver.cpp  partitioning.cpp  phase_change.cpp  polymesh_reader.cpp  preconditioner.cpp  radiation.cpp  simple_solver.cpp  solid_conduction.cpp  steam_tables.cpp  surface_tension.cpp  time_control.cpp  turbulence.cpp  turbulence_sst.cpp  two_fluid_solver.cpp  vtk_writer.cpp  wall_boiling.cpp
cpp/tests/: benchmark_gpu.cu  benchmark_mpi.cpp  test_basic.cpp  test_new_modules.cpp  test_simple.cpp  test_simple_python.py  verification_cases.cpp
mesh/: __init__.py  amr.py  hybrid_mesh_generator.py  mesh_generator.py  mesh_generator_3d.py  mesh_reader.py  vtk_exporter.py
models/: __init__.py  chemistry.py  closure.py  conjugate_ht.py  phase_change.py  radiation.py  single_phase.py  solid_conduction.py  turbulence.py  two_fluid.py
parallel/: __init__.py  mpi_solver.py  partitioning.py
report/: K-CFD_Technical_Report.docx  __init__.py  report_generator.py
verification/: __init__.py  case10_reaction.py  case11_radiation.py  case12_amr.py  case13_gpu.py  case14_3d_cavity.py  case15_3d_convection.py  case16_preconditioner.py  case17_adaptive_dt.py  case18_web_dashboard.py  case19_boiling_condensation.py  case1_poiseuille.py  case20_edwards_blowdown.py  case21_6eq_heated_channel.py  case22_hybrid_mesh.py  case23_3d_transient.py  case24_pool_boiling.py  case25_film_condensation.py  case2_cavity.py  case3_cht.py  case4_bubble_column.py  case5_3d_duct.py  case6_muscl.py  case7_unstructured.py  case8_mpi.py  case9_phase_change.py  plot_config.py  run_all.py
visualization/: __init__.py  paraview_render.py  vtu_renderer.py  web_dashboard.py
